better handling game state

--- a/src/features/GameInfoComponent.scss
+++ b/src/features/GameInfoComponent.scss
@@ -4,7 +4,7 @@ div.game-info {
   gap: 15px;
 }
 
-.material-score, .check-state {
+.material-score, .check-state, .checkmate-state {
   display: flex;
   gap: 15px;
 }
