handling fen state notation (to be continued)

--- a/src/features/GameInfoComponent.scss
+++ b/src/features/GameInfoComponent.scss
@@ -2,9 +2,10 @@ div.game-info {
   display: flex;
   flex-direction: column;
   gap: 15px;
+  flex-grow: 1;
 }
 
-.material-score, .check-state, .checkmate-state {
+.state, .material-score, .check-state, .checkmate-state {
   display: flex;
   gap: 15px;
 }
