--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,16 @@
 div.App {
   display: flex;
+  flex-direction: column;
   gap: 15px;
   margin: 15px;
+
+  div.actions {
+    display: flex;
+    gap: 15px;
+  }
+
+  div.board {
+    display: flex;
+    gap: 15px;
+  }
 }
