updated ui design

--- a/src/features/GameInfoComponent.scss
+++ b/src/features/GameInfoComponent.scss
@@ -5,7 +5,7 @@ div.game-info {
   flex-grow: 1;
 }
 
-.state, .material-score, .check-state, .checkmate-state {
+.state, .material-score {
   display: flex;
   gap: 15px;
 }
