--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,10 @@ div.App {
   display: flex;
   flex-direction: column;
   gap: 15px;
-  margin: 15px;
+  padding: 15px;
+  min-width: 500px;
+  max-width: 1000px;
+  margin: auto;
 
   div.controls {
     display: flex;
@@ -12,5 +15,9 @@ div.App {
   div.board {
     display: flex;
     gap: 15px;
+
+    div.player {
+      flex-grow: 1;
+    }
   }
 }
