--- a/src/features/SquareComponent.scss
+++ b/src/features/SquareComponent.scss
@@ -17,4 +17,8 @@ td {
   &.highlighted {
     background-color: darkseagreen !important;
   }
+
+  &.highlighted-last-move {
+    background-color: darksalmon !important;
+  }
 }
