--- a/src/features/GameHudComponent.scss
+++ b/src/features/GameHudComponent.scss
@@ -1,15 +1,15 @@
 .hud-component {
   display: flex;
-  flex-direction: column;
   gap: 15px;
   width: 100%;
 
   .players {
     display: flex;
+    flex-direction: column;
     gap: 15px;
+  }
 
-    .player {
-      flex-grow: 1;
-    }
+  .game-info {
+    flex-grow: 1;
   }
 }
